cluster/projects/fopido/overlay/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fopido
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-force-host: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: docs.fortepiano-unterricht.de
      http:
        paths:
          - backend:
              service:
                name: fopido
                port:
                  number: 80
            path: /
